--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2020",
         "module": "CommonJS",
         "moduleResolution": "node",
-        "outDir": "./dist",
+        "outDir": "dist",
         "declaration": true,
         "sourceMap": true,
         "esModuleInterop": true
