--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,10 @@
 {
+    "root": true,
     "env": {
         "node": true,
         "commonjs": true
     },
-    "extends": ["eslint:recommended", "plugin:node/recommended"],
-    "parserOptions": {
-        "ecmaVersion": 2020
-    }
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
 }
