--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "start": "ts-node ./src/index.ts",
         "build": "tsc",
         "test": "mocha -r ts-node/register 'tests/**/*.ts'",
-        "local": "npm i -g && prsize"
+        "local": "npm i -g && prsize",
+        "lint": "npx eslint . --ext .ts",
+        "prepare": "npm run build"
     },
     "license": "MIT",
     "keywords": [
@@ -39,6 +41,8 @@
         "@types/minimist": "^1.2.1",
         "@types/mocha": "^8.2.1",
         "@types/node": "^14.14.34",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
         "chai": "^4.3.4",
         "eslint": "^7.22.0",
         "eslint-plugin-node": "^11.1.0",
